fixed social icon alignment

--- a/src/componentStyling/global.css
+++ b/src/componentStyling/global.css
@@ -42,3 +42,6 @@
   height: 100px;
 }
 
+.text-align-left {
+  text-align: left;
+}
